# LLM_zoomcamp

./: PRD_nz_open_data_assistant.md  pyproject.toml
dlt_workshop/: .env.example  .gitignore  README.md  agent.py  analyze.py  homework_solution.md  ingest.py  load_traces.py  main.py  observability.py  pyproject.toml
dlt_workshop/tests/: test_homework.py
evaluation/: homework_solution.md
evaluation/results/: homework_results.json
evaluation/scripts/: run_homework.py
monitoring/: .gitignore  README.md  homework.py  homework_solution.md  pyproject.toml  rag_helper.py  starter.py  tracing.py
monitoring/tests/: test_tracing.py
orchestration/: homework_solution.md
orchestration/results/: homework_ollama_results.json
orchestration/scripts/: run_homework_ollama.py
project/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
project/app/: streamlit_app.py
project/data/: seed_datasets.json
project/docs/: PRD.md  architecture.md  evaluation.md
project/evaluation/: answer_cases.json  ground_truth.jsonl
project/scripts/: bootstrap.sh
project/src/nz_open_data_assistant/: __init__.py  answer_evaluation.py  answering.py  api.py  catalogue.py  config.py  evaluation.py  ingestion.py  models.py  retrieval.py  service.py  storage.py  text.py
project/tests/: conftest.py  test_answer_evaluation.py  test_api.py  test_catalogue.py  test_evaluation.py  test_retrieval.py  test_storage.py  test_text.py
rag/: README.md  homework-1.ipynb  ingest.py  pyproject.toml
rag/llm-zoomcamp-code/: Untitled.ipynb
vector/: homework-2.ipynb  main.py  pyproject.toml
