[project]
name = "llm-zoomcamp-dlt-homework"
version = "0.1.0"
description = "LLM Zoomcamp 2026 dlt workshop homework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dlt[duckdb]>=1.20.0",
    "duckdb>=1.4.0",
    "logfire>=4.0.0",
    "minsearch>=0.2.0",
    "pandas>=2.2.0",
    "pydantic-ai>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
]

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

