[project]
name = "nz-regional-insights-assistant"
version = "0.1.0"
description = "A grounded assistant for discovering and querying Auckland open data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.116.1",
    "httpx==0.28.1",
    "openai==1.97.1",
    "pandas==2.3.1",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "python-dotenv==1.1.1",
    "streamlit==1.47.0",
    "tenacity==9.1.2",
    "uvicorn[standard]==0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "ruff==0.12.5",
]

[project.scripts]
nz-ingest = "nz_open_data_assistant.ingestion:main"
nz-evaluate = "nz_open_data_assistant.evaluation:main"
nz-evaluate-answers = "nz_open_data_assistant.answer_evaluation:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nz_open_data_assistant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
