[project]
name = "vector"
version = "0.1.0"
description = "LLM Zoomcamp 2026 vector search homework"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gitsource>=0.0.5",
    "huggingface-hub>=1.4.1",
    "jupyter>=1.1.1",
    "minsearch>=0.0.11",
    "numpy>=2.4.0",
    "onnxruntime>=1.24.0",
    "tokenizers>=0.22.2",
    "tqdm>=4.67.1",
]

[tool.uv]
package = false
